--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@mantine/core": "^5.3.3",
     "@mantine/ds": "^5.3.3",
+    "@mantine/form": "^5.3.3",
     "@mantine/hooks": "^5.3.3",
     "@mantine/next": "^5.3.3",
     "@tabler/icons": "^1.96.0",
     "next": "12.3.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "realm-web": "^1.7.1"
   },
   "devDependencies": {
     "@types/node": "18.7.18",
