--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "@tabler/icons": "^1.96.0",
     "next": "12.3.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "realm-web": "^1.7.1"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@types/node": "18.7.18",
