--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@mantine/form": "^5.3.3",
     "@mantine/hooks": "^5.3.3",
     "@mantine/next": "^5.3.3",
+    "@supabase/auth-helpers-nextjs": "^0.4.1",
+    "@supabase/auth-helpers-react": "^0.3.0",
+    "@supabase/supabase-js": "^2.0.4",
     "@tabler/icons": "^1.96.0",
     "next": "12.3.0",
     "react": "18.2.0",
