--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@supabase/supabase-js": "^2.0.4",
     "@tabler/icons": "^1.96.0",
     "next": "12.3.0",
+    "nextjs-redirect": "^6.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
